cluster-bootstrap/namespaces-needed-for-monitoring.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-apiserver
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-controller-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-kube-apiserver
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-kube-scheduler
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-kube-controller-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-etcd
